// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui - PhoneInput > should call onValueChange with parsed metadata 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_26_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_26_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should control the value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_6_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_6_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should display error message 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_i_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="true"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-describedby="_r_j_"
          aria-invalid="true"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_i_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            AlertCircleIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_j_"
        role="status"
      >
        Invalid phone number format
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should have a placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_12_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇺🇸
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_12_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_c_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="true"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="true"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          disabled=""
          id="phone-_r_c_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="phone-_r_0_"
      >
        Phone
      </label>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_0_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with required field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="phone-_r_q_"
        >
          Phone
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        >
          *
        </span>
      </div>
      <div
        class="styles__18vyj9d4 styles_large__18vyj9d1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__18vyj9d0 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__18vyj9d5"
          data-size="large"
          id="phone-_r_q_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          required=""
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
